--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="skill-row">
         <img class="web-img" src="Images/coding.png" alt="Coding ">
         <h3>Web Development</h3>
-        <p class="web-description">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        <p class="web-description">Have established skills in Front End Development with hands on multiple projects.</p>
       </div>
       <div class="skill-row">
         <img class="content-img" src="Images/writer.png" alt="Writer">
