--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <div class="middle-container">
     <div class="profile">
       <img class="pimage" src="Images/Profile pic.png" alt="Darshil's Photo">
-      <h2>Hello.</h2>
-      <p class="ptext">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+      <h2>This is me!</h2>
+      <p class="ptext">A tech Junkie with interest in learning something new everyday. HAve grat interest in chess and math.</p>
     </div>
     <hr>
     <div class="skills">
@@ -39,7 +39,7 @@
       <div class="skill-row">
         <img class="content-img" src="Images/writer.png" alt="Writer">
         <h3>Content Writer & Poet</h3>
-        <p class="content-description">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        <p class="content-description">Have wrote Poems in Hindi Literature and an active writer.</p>
       </div>
     </div>
     <hr>
@@ -55,7 +55,6 @@
   <div class="bottom-container">
     <a class="footer-link" href="www.linkedin.com/in/darshil-marathe">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/DarshilMarathe">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
     <p class="copyright">©2022 Darshil Marathe.</p>
   </div>
 
