--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="profile">
       <img class="pimage" src="Images/Profile pic.png" alt="Darshil's Photo">
       <h2>This is me!</h2>
-      <p class="ptext">A tech Junkie with interest in learning something new everyday. HAve grat interest in chess and math.</p>
+      <p class="ptext">A tech Junkie with interest in learning something new everyday. Have huge interest in chess and math.</p>
     </div>
     <hr>
     <div class="skills">
@@ -39,14 +39,14 @@
       <div class="skill-row">
         <img class="content-img" src="Images/writer.png" alt="Writer">
         <h3>Content Writer & Poet</h3>
-        <p class="content-description">Have wrote Poems in Hindi Literature and an active writer.</p>
+        <p class="content-description">Love writing Poems in Hindi Literature and an active writer.</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-      <p class="contact-message">cocococLorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <h3>.</h3>
+      <p class="contact-message">Get in touch for project collaboration or have any doubts?</p>
       <a class="btn" href="mailto:darshilm1010@gmail.com">CONTACT ME</a>
     </div>
   </div>
