--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="www.linkedin.com/in/darshil-marathe">LinkedIn</a>
+    <a class="footer-link" href="https://linkedin.com/in/darshil-marathe">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/DarshilMarathe">Twitter</a>
     <p class="copyright">©2022 Darshil Marathe.</p>
   </div>
