--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="topcontainer">
     <img class="top_cloud" src="Images/cloud.png" alt="cloud img">
     <h1>I'm Darshil.</h1>
-    <h2>a programmer!</h2>
+    <h2>a programmer!<br>Hustling my way around!</h2>
     <img class="bottom_cloud" src="Images/cloud.png" alt="cloud img">
     <img src="Images/mountain.png" alt="mountain img">
   </div>
