--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <img class="bottom_cloud" src="Images/cloud.png" alt="cloud img">
     <img src="Images/mountain.png" alt="mountain img">
   </div>
-
+<!-- Less go! -->
   <div class="middle-container">
     <div class="profile">
       <img class="pimage" src="Images/Profile pic.png" alt="Darshil's Photo">
